Remove duplicated statics